Form Layout und Design implementiert

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <header class="flexbox">
             Mobiltarifvergleich
         </header>
-        <main class="flexbox">
+        <main class="main">
             
         </main>
         <footer class="flexbox">
